--- a/src/app/components/industrytypes/industrytypes.component.html
+++ b/src/app/components/industrytypes/industrytypes.component.html
@@ -7,30 +7,30 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        Name :
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="industrytypes.InstitutionName" placeholder="InstitutionName">
+                            [(ngModel)]="industrytypes.Name" placeholder="Name">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        Code :
                     </div>
                     <div class="col-md-3">
                         <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
                             <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
                         </select> -->
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="industrytypes.QulificationTypeId" placeholder="QualificationtypeId" />
+                        <input type="text" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="industrytypes.Code" placeholder="Code" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        IsActive :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="industrytypes.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="industrytypes.IsActive" placeholder="IsActive" />
                     </div>
                 </div>
 
@@ -56,9 +56,9 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>Name</th>
+                                        <th>Code</th>
+                                        <th>IsActive</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +71,9 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.Name}}</td>
+                                        <td>{{item.Code}}</td>
+                                        <td>{{item.IsActive}}</td>
                                         <td><button class="btn btn-info" (click)="GetIndustryTypesById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteIndustryTypes(item.Id)"> Delete
