--- a/src/app/components/coutrystates/coutrystates.component.html
+++ b/src/app/components/coutrystates/coutrystates.component.html
@@ -7,30 +7,21 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        StateId :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="coutrystates.InstitutionName" placeholder="InstitutionName">
+                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="coutrystates.StateId" placeholder="StateId">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        CountryId :
                     </div>
                     <div class="col-md-3">
                         <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
                             <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
                         </select> -->
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="coutrystates.QulificationTypeId" placeholder="QualificationtypeId" />
-                    </div>
-
-                    <br><br>
-                    <div class="col-md-3">
-                        MediumId :
-                    </div>
-                    <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="coutrystates.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="coutrystates.CountryId" placeholder="CountryId" />
                     </div>
                 </div>
 
@@ -56,9 +47,8 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>StateId</th>
+                                        <th>CountryId</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +61,8 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.StateId}}</td>
+                                        <td>{{item.CountryId}}</td>
                                         <td><button class="btn btn-info" (click)="GetCoutryStatesById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteCoutryStates(item.Id)"> Delete
