--- a/src/app/components/cyears/cyears.component.html
+++ b/src/app/components/cyears/cyears.component.html
@@ -7,32 +7,32 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        Name :
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="cyears.InstitutionName" placeholder="InstitutionName">
+                            [(ngModel)]="cyears.Name" placeholder="Name">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        Code :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="cyears.QulificationTypeId" placeholder="QualificationtypeId" />
+                            [(ngModel)]="cyears.Code" placeholder="Code" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        OrderId :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="cyears.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="cyears.OrderId" placeholder="OrderId" />
                     </div>
                 </div>
+
+
+
 
                 <div class="row " style="padding-bottom: 10px;">
                     <div class="col-md-9"></div>
@@ -56,9 +56,9 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>Name</th>
+                                        <th>Code</th>
+                                        <th>OrderId</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +71,9 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.Name}}</td>
+                                        <td>{{item.Code}}</td>
+                                        <td>{{item.OrderId}}</td>
                                         <td><button class="btn btn-info" (click)="GetCYearsById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteCYears(item.Id)"> Delete
