--- a/src/app/components/family/family.component.html
+++ b/src/app/components/family/family.component.html
@@ -7,31 +7,47 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        UserId :
                     </div>
                     <div class="col-md-3">
-                        <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="family.InstitutionName" placeholder="InstitutionName">
+                        <input type="number" id="txtskill" class="form-control" Name="txtskill"
+                            [(ngModel)]="family.UserId" placeholder="UserId">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        FirstName :
                     </div>
                     <div class="col-md-3">
                         <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
                             <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
                         </select> -->
                         <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="family.QulificationTypeId" placeholder="QualificationtypeId" />
+                            [(ngModel)]="family.FirstName" placeholder="FirstName" />
                     </div>
 
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        LastName :
                     </div>
                     <div class="col-md-3">
                         <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="family.MediumId" placeholder="MediumId" />
+                            [(ngModel)]="family.LastName" placeholder="LastName" />
                     </div>
+                    <div class="col-md-3">
+                        RelationTypeId :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="family.RelationTypeId" placeholder="RelationTypeId" />
+                    </div>
+                    <br><br>
+                    <div class="col-md-3">
+                        IsGurdian :
+                    </div>
+                    <div class="col-md-3">
+                        <input type="number" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="family.IsGurdian" placeholder="IsGurdian" />
+                    </div>
+
                 </div>
 
                 <div class="row " style="padding-bottom: 10px;">
@@ -56,9 +72,11 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>UserId</th>
+                                        <th>FirstName</th>
+                                        <th>LastName</th>
+                                        <th>RelationTypeId</th>
+                                        <th>IsGurdian</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +89,11 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.UserId}}</td>
+                                        <td>{{item.FirstName}}</td>
+                                        <td>{{item.LastName}}</td>
+                                        <td>{{item.RelationTypeId}}</td>
+                                        <td>{{item.IsGurdian}}</td>
                                         <td><button class="btn btn-info" (click)="GetFamilyById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteFamily(item.Id)"> Delete
