--- a/src/app/components/institutionemails/institutionemails.component.html
+++ b/src/app/components/institutionemails/institutionemails.component.html
@@ -63,7 +63,7 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionAddressId</th>
+                                        <th>InstitutionAddress</th>
                                         <th>Email</th>
                                         <th>IsPrimary</th>
                                         <th>OrderId</th>
