--- a/src/app/components/institutioncontacts/institutioncontacts.component.html
+++ b/src/app/components/institutioncontacts/institutioncontacts.component.html
@@ -1,4 +1,3 @@
-
 <div class='dashboard-content'>
     <div class='container'>
         <div class='card'>
@@ -96,8 +95,7 @@
 
                                         <td><button class="btn btn-primary"
                                                 (click)="GetInstitutionContactsById(item.Id)"> EDIT </button></td>
-                                        <td><button class="btn btn-danger" (click)="DeleteInstitutionContacts(item.Id)">
-                                                DELETE </button></td>
+                                        <td><button class="btn btn-danger" (click)="DeleteInstitutionContacts(item.Id)"> DELETE </button></td>
                                     </tr>
                                 </tbody>
                             </table>
