--- a/src/app/components/marritalstatus/marritalstatus.component.html
+++ b/src/app/components/marritalstatus/marritalstatus.component.html
@@ -7,31 +7,21 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        StatusName :
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="marritalstatus.InstitutionName" placeholder="InstitutionName">
+                            [(ngModel)]="marritalstatus.StatusName" placeholder="StatusName">
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        Code :
                     </div>
                     <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="marritalstatus.QulificationTypeId" placeholder="QualificationtypeId" />
+                       
+                        <input type="text" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="marritalstatus.Code" placeholder="Code" />
                     </div>
-
                     <br><br>
-                    <div class="col-md-3">
-                        MediumId :
-                    </div>
-                    <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="marritalstatus.MediumId" placeholder="MediumId" />
-                    </div>
                 </div>
 
                 <div class="row " style="padding-bottom: 10px;">
@@ -56,9 +46,8 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>StatusName</th>
+                                        <th>Code</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +60,8 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.StatusName}}</td>
+                                        <td>{{item.Code}}</td>
                                         <td><button class="btn btn-info" (click)="GetMarritalStatusById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteMarritalStatus(item.Id)"> Delete
