--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -7,30 +7,26 @@
             <div class='card-body'>
                 <div class="row" style="padding-bottom: 10px;">
                     <div class="col-md-3">
-                        InstitutionName :
+                        Name :
                     </div>
                     <div class="col-md-3">
                         <input type="text" id="txtskill" class="form-control" Name="txtskill"
-                            [(ngModel)]="task.InstitutionName" placeholder="InstitutionName">
+                            [(ngModel)]="task.Name" placeholder="Name">
+                    </div>
+                    <div class="col-md-3">  
+                        Code :
                     </div>
                     <div class="col-md-3">
-                        QualificationtypeId :
+                        <input type="text" name="txtcode" class="form-control" id="txtcode"
+                            [(ngModel)]="task.Code" placeholder="Code" />
                     </div>
-                    <div class="col-md-3">
-                        <!-- <select name="" id="" name="QualificationName" [(ngModel)]="institution.QualificationtypeId">
-                            <option *ngFor="let item of qualificationdata" value="{{item.QualificationName}}" > {{item.QualificationName}} </option>
-                        </select> -->
-                        <input type="number" name="txtcode" class="form-control" id="txtcode"
-                            [(ngModel)]="task.QulificationTypeId" placeholder="QualificationtypeId" />
-                    </div>
-
                     <br><br>
                     <div class="col-md-3">
-                        MediumId :
+                        Description :
                     </div>
                     <div class="col-md-3">
-                        <input type="number" name="txtcode" id="txtcode" class="form-control"
-                            [(ngModel)]="task.MediumId" placeholder="MediumId" />
+                        <input type="text" name="txtcode" id="txtcode" class="form-control"
+                            [(ngModel)]="task.Description" placeholder="Description" />
                     </div>
                 </div>
 
@@ -56,9 +52,9 @@
                             <table class="table table-bordered">
                                 <thead>
                                     <tr style="background-color: #007bff;color: white">
-                                        <th>InstitutionName</th>
-                                        <th>QualificationtypeId</th>
-                                        <th>MediumId</th>
+                                        <th>Name</th>
+                                        <th>Code</th>
+                                        <th>Description</th>
                                         <th style="text-align: center;" colspan="2">Action</th>
 
                                     </tr>
@@ -71,9 +67,9 @@
                                         totalItems: count
                                       };
                                     let i = index">
-                                        <td>{{item.InstitutionName}}</td>
-                                        <td>{{item.QulificationTypeId}}</td>
-                                        <td>{{item.MediumId}}</td>
+                                        <td>{{item.Name}}</td>
+                                        <td>{{item.Code}}</td>
+                                        <td>{{item.Description}}</td>
                                         <td><button class="btn btn-info" (click)="GetTaskById(item.Id)"> Edit
                                             </button></td>
                                         <td><button class="btn btn-danger" (click)="DeleteTask(item.Id)"> Delete
